Add: Frameworks to the project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "cSpell.words": [
     "astro",
-    "astrojs"
+    "astrojs",
+    "fontsource",
+    "tailwindcss",
+    "tseslint",
+    "zustand"
   ]
 }
