--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro", 
+    "lint": "eslint ."
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -21,6 +22,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   }
 }
