add: New Data to Project and Playlist

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,17 @@
   "cSpell.words": [
     "astro",
     "astrojs",
+    "Casiio",
+    "Chau",
     "fontsource",
+    "Kupla",
+    "Nadav",
+    "Raimu",
+    "Saura",
     "tailwindcss",
     "tseslint",
+    "xander",
+    "Yasumu",
     "zustand"
   ]
 }
